@@ -1,4 +1,8 @@
-﻿drkns 05.01.2014 19:39:38 +0200 - build 3761
+﻿drkns 05.01.2014 22:55:23 +0200 - build 3762
+
+1. VC10.
+
+drkns 05.01.2014 19:39:38 +0200 - build 3761
 
 1. 0002553: Ненужные хоткеи F3/F4 в история команд (Alt-F8)
 
